--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "css-loader": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.2",
